Closed Bug 1341511 Opened 7 years ago Closed 7 years ago

[Static Analysis][Incorrect expressio] UiCompositorControllerChild.cpp: sResizeCache.empty() is only useful for its return value, which is ignored

Categories

(Firefox for Android Graveyard :: Toolbar, defect, P2)

defect

Tracking

(firefox53+ fixed, firefox54 fixed)

RESOLVED FIXED
Firefox 54
Tracking Status
firefox53 + fixed
firefox54 --- fixed

People

(Reporter: kanru, Assigned: rbarker)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: CID 1401392)

Attachments

(1 file, 1 obsolete file)

Do you mean .clear()?
Flags: needinfo?(rbarker)
This was found using the Coverity tool. https://developer.mozilla.org/en-US/docs/Debugging/Coverity
Assignee: nobody → rbarker
Flags: needinfo?(rbarker)
As we uplifted bug 1336929 into aurora, we will have to uplift this one too.
Attachment #8842155 - Flags: review?(nchen)
Attachment #8842155 - Flags: review?(dvander)
Attachment #8842155 - Flags: review?(dvander) → review+
Attachment #8842155 - Flags: review?(nchen) → review+
Pushed by rbarker@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f3b989e0a7b9
Replace std::map::empty() call with correct std::map::clear() call to remove all elements from the map r=dvander,jchen
Approval Request Comment
[Feature/Bug causing the regression]: 1336929
[User impact if declined]: None
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: no
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: No
[Why is the change risky/not risky?]: The patch correctly clears a std::map after usage.
[String changes made/needed]: none
Attachment #8842155 - Attachment is obsolete: true
Attachment #8842566 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/f3b989e0a7b9
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 54
Comment on attachment 8842566 [details] [diff] [review]
0001-Bug-1341511-Replace-std-map-empty-call-with-correct-std-map-clear-call-to-remove-all-elements-from-the-map-r-dvander-jchen-17030112-b60c2d4.patch

Cleanup for regression fix, let's take this in 53.
Attachment #8842566 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.