Bug 1341511 - Replace std::map::empty() call with correct std::map::clear() call to remove all elements from the map. r=dvander, r=jchen, a=lizzard

--HG--
extra : source : f3b989e0a7b90950c47dd72425c7f669f027c685