gfx/layers/ipc/UiCompositorControllerChild.cpp
@@ -57,7 +57,7 @@ DoCachedResize()
     sChild->SendResumeAndResize(cache.first, cache.second.mSurfaceWidth, cache.second.mSurfaceHeight);
   }
 
-  sResizeCache.empty();
+  sResizeCache.clear();
 }
 
 } // namespace
